ceph-utility/templates/utility-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: ceph-utility
spec:
  podSelector:
    matchLabels:
      role: ceph-utility
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: ceph
    - podSelector:
        matchLabels:
          application: ceph
          component: mon
